--- a/index_prd.html
+++ b/index_prd.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Webpack App</title>
-    <link rel="stylesheet" href="./dist/main.css">
+    <link rel="stylesheet" href="./dist/main.4737337.css">
 </head>
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="./dist/main.f169cd2.js"></script>
+<script type="text/javascript" src="./dist/main.4737337.js"></script>
 </body>
 </html>
