--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>App</title>
-    <link rel="stylesheet" type="text/css" href="./dist/main.css">
+    <title>Webpack App</title>
+    <link rel="stylesheet" href="./dist/main.css">
 </head>
 <body>
-<div id="app">
-</div>
-
-<script type="text/javascript" src="./dist/main.js"></script>
+<div id="app"></div>
+<script type="text/javascript" src="./dist/main.aac9549.js"></script>
 </body>
 </html>
