--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Webpack App</title>
-    <link rel="stylesheet" href="./dist/main.css">
+    <title>App</title>
+    <link rel="stylesheet" type="text/css" href="./dist/main.css">
 </head>
+
 <body>
-<div id="app"></div>
-<script type="text/javascript" src="./dist/main.aac9549.js"></script>
+    <div id="app">
+    </div>
+
+    <script type="text/javascript" src="./dist/main.js"></script>
 </body>
+
 </html>
